--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -1,4 +1,4 @@
-﻿@charset "utf-8";/* CSS Document*/
+@charset "utf-8";/* CSS Document*/
 *{margin: 0;padding: 0;outline: none;}
 *:not(input,textarea){-webkit-touch-callout: none;-webkit-user-select: none;}
 body{background:#fff;width: 100%;margin: 0 auto;font:normal 12px 'Arial','Microsoft YaHei', '微软雅黑';color: #333;-webkit-touch-callout: inherit ;
@@ -115,7 +115,7 @@ a.step{background: #333;color: #fff;border-radius: 5px;margin-top: 20px;display:
 .share_l{max-width: 400px !important;}
 
 /**头部**/
-.big_nav{position: fixed;top: 0;left: 0;z-index: 100;background: #fff;width: 100%;}
+.big_nav{position: fixed;top: 0;left: 0;z-index: 101;background: #fff;width: 100%;}
 .nav{position: relative;margin: auto;height: 144px;}
 .nav .whatapp{font-size: 14px;color: #333;position: absolute;top: 20px;right: 0;display: inline-block;padding-left: 24px;}
 .nav .whatapp img{position: absolute;left: 0;width: 16px;height: 16px;}
@@ -337,29 +337,31 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	.nav .mn_type .top.active img{transform: rotate(180deg);}
 	
 	/**购物车**/
-	.nav_cart {box-shadow: 0 5px 10px 2px rgba(222,222,222,.5);width: 26.04vw;padding: 0 2.08vw;
-	position: absolute;right: 0;top: 0;z-index: 11;display: none;min-height: 13vw;
+	.nav_cart {box-shadow: 0 5px 10px 2px rgba(222,222,222,.5);width: 26.04vw;padding: 0 2.08vw 0 0;
+	position: absolute;right: 0;top: 0;z-index: 101;display: none;min-height: 13vw;
 	background:#fff url(../img/loading.gif) no-repeat center bottom 1vw;background-size: 4.5vw 4.5vw;}
-	.nav_cart h1{font-size: 1.25vw;color: #000;font-weight: bold;line-height: 1.25vw;margin-top: 4.16vw;margin-bottom: 2.18vw;} 
+	.nav_cart h1{font-size: 1.25vw;color: #000;font-weight: bold;line-height: 1.25vw;margin-top: 4.16vw;margin-bottom: 2.18vw;padding-left: 2.08vw;} 
 	.nav_cart h1 .close{float: right;width: 1.04vw;height: 1.14vw;cursor: pointer;transition: all .5s;}
 	.nav_cart h1 .close:hover{transform: rotate(90deg);}
-	.nav_cart .cart_ul{max-height: 19.37vw;overflow-y: auto;/*padding-right: 2.08vw;*/padding-right: 17px;}
-	.nav_cart .cart_ul li{margin-bottom: 1.25vw;}
+	.nav_cart .cart_ul{max-height: 19.37vw;overflow-y: auto;padding-right: 17px;padding-left: 2.08vw;}
+	.nav_cart .cart_ul li{margin-bottom: 1.25vw;position: relative;}
+	.nav_cart .cart_ul li .li_dle{width: 2.08vw;height:5.2vw;background: url(../img/png/close5.png) no-repeat center/24px;position: absolute;left: -2.08vw;
+	cursor: pointer;}
 	.nav_cart .cart_ul li .pic_img{width: 5.2vw;height: 5.2vw;background: #cfcfcf;float: left;overflow: hidden;}
 	.nav_cart .cart_ul li .pic_img img{display: block;width: 100%;transition: all .5s;}
-	.nav_cart .cart_ul li .text{float: right;text-align: right;max-width: 13vw;}
+	.nav_cart .cart_ul li .text{float: right;text-align: right;max-width: 12vw;}
 	.nav_cart .cart_ul li .text h2{font-size: 0.73vw;color: #333;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;margin-bottom: 0.78vw;font-weight: normal;}
 	.nav_cart .cart_ul li .text p{font-size: 0.72vw;line-height: 0.72vw;padding-bottom: 0.52vw;}
 	.nav_cart .cart_ul li .text>span{font-size: 0.93vw;color: #333;line-height: 0.93vw;display: block;float: right;width: 100%;margin-bottom: 0.78vw;}
-	.nav_cart .price_input{clear: both;border: 1px solid #ccc;width: 6.15vw;position: relative;float: right;}
-	.nav_cart .price_input span{display: block;float: left; width: 1.82vw;height: 1.82vw;cursor: pointer;position: absolute;top:0;}
+	.nav_cart .price_input{clear: both;border: 1px solid #ccc;width: 5.01vw;position: relative;float: right;}
+	.nav_cart .price_input span{display: block;float: left; width: 1.5vw;height: 1.5vw;cursor: pointer;position: absolute;top:0;}
 	.nav_cart .price_input span.sub{background: url(../img/png/sub.png) no-repeat center/0.68vw;left: 0;}
 	.nav_cart .price_input span.add{background: url(../img/png/add.png) no-repeat center/0.68vw;right: 0;}
-	.nav_cart .price_input input{display: inline-block;width: 2.5vw;height: 1.82vw;line-height: 1.82vw; float: left;margin-left: 1.82vw;
+	.nav_cart .price_input input{display: inline-block;width: 1.8vw;height: 1.5vw;line-height: 1.5vw; float: left;margin-left: 1.5vw;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;font-size: 0.83vw;}
 	
 	.nav_cart .cart_ul li:hover .pic_img img{transform: scale(1.2);}
-	.nav_cart hr{background: #ccc;width: calc(100% - 34px);height: 1px;border: none;position: relative;top: -1px;}
+	.nav_cart hr{background: #ccc;width: calc(100% - 34px - 2.08vw);height: 1px;border: none;position: relative;top: -1px;margin-left: 2.08vw;}
 	.nav_cart .bot{/*padding-right: 2.78vw;*/padding-right:34px;}
 	.nav_cart .bot .p_top{font-size: 0.83vw;color: #333;line-height: 0.83vw;margin-top:1.14vw;}
 	.nav_cart .bot .p_bot{font-size: 1.45vw;color: #000;line-height: 1.45vw;margin-top: 1.25vw;font-weight: bold;}
@@ -368,8 +370,8 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	border-radius: 50px;display: block;margin: 1.87vw 0 0 0;
 	background: -webkit-linear-gradient(left, #f23030 , #fb3500);background: -o-linear-gradient(right, #f23030, #fb3500);
 	  background: -moz-linear-gradient(right, #f23030, #fb3500); background: linear-gradient(to right, #f23030 , #fb3500);}
-	.nav_cart .has{background: #fff;padding-bottom: 2.29vw;}
-	.nav_cart .null {padding: 3.05vw 0 5.2vw 0;display: block;background: #fff;}
+	.nav_cart .has{background: #fff;padding-bottom: 2.29vw;padding-left: 2.08vw;}
+	.nav_cart .null {padding: 3.05vw 0 5.2vw 2.08vw;display: block;background: #fff;}
 	.nav_cart .null p{font-size: 0.83vw;color: #333;text-align: center;}
 	
 	/***搜索弹窗***/
